# soda-benchmarks

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
examples/: README.md
examples/soda-plugins/lib/sodap/: AnnotateTosaOps.cpp  CMakeLists.txt  GenerateLinalgSummary.cpp  InstrPasses.cpp  MyExtension.cpp  SODAPPasses.cpp  SODAPTransforms.cpp  ViewOpGraph.cpp
examples/soda-plugins/lib/sodap/Conversion/: CMakeLists.txt
examples/soda-plugins/lib/sodap/Conversion/LinalgToESPRuntime/: CMakeLists.txt  ESPPasses.cpp
examples/soda-plugins/lib/sodap/ExecutionEngine/: CMakeLists.txt  EspRuntimeMock.cpp
examples/soda-plugins/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
examples/soda-plugins/test/sodap/: annotate-tosa-ops.mlir  my-extension.mlir  print-op-graph.mlir  soda-pass-plugin.mlir  view-op-graph-tosa.mlir
examples/soda-plugins/test/sodap/Analysis/: operation-info.mlir
examples/soda-plugins/test/sodap/ESP/: batch-matmul-to-esp.mlir  run-batch-matmul-esp.mlir
examples/soda-plugins/test/sodap/Instrumentation/: scf-instr-hwcounter.mlir  scf-instr.mlir
examples/soda-plugins/test/sodap/Util/: tagops.mlir
models/: README.md
scripts/: README.md  c_to_verilog.sh  graphdef_to_tosa.sh  linalg_to_llvm.sh  link_memref_copy.sh  ll_to_verilog.sh  llvm_to_ll.sh  mlir_to_graph.sh  patch_openroad_synt.sh  soda_to_llvm_baseline.sh  soda_to_llvm_optimized.sh  soda_to_llvm_transformed.sh  tflite_to_tosa.sh  tosa_to_linalg.sh  verilog_to_gds.sh
tests/: pytorch_small_test.sh  pytorch_tests.sh  tflite_tests.sh
tutorials/: README.md
(+139 files in other folders)
